<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.raimikarim.thekiasushopper.MainActivity"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode ="true"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/block_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4">

            <TextView
                android:id="@+id/title_a"
                style="@style/choice_number"
                android:text="@string/text_item_a" />

            <TextView
                android:id="@+id/item_a_positive"
                style="@style/symbol"
                android:layout_toRightOf="@+id/title_a"
                android:text="@string/text_tickmark"
                android:textColor="@android:color/holo_green_dark"
                android:layout_toEndOf="@+id/title_a" />

            <TextView
                android:id="@+id/item_a_negative"
                style="@style/symbol"
                android:layout_toRightOf="@+id/title_a"
                android:text="@string/text_wrongsign"
                android:textColor="@android:color/holo_red_dark"
                android:layout_toEndOf="@+id/title_a" />

            <EditText
                android:id="@+id/item_a_price"
                style="@style/edittext"
                android:layout_below="@+id/title_a"
                android:layout_centerHorizontal="true"
                android:hint="@string/edittext_price"
                android:importantForAutofill="no"
                android:nextFocusDown="@+id/item_a_qty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_a_price"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-24dp"
                android:gravity="center"
                android:text="@string/text_per"
                android:textColor="#303030"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/item_a_price"
                android:layout_alignTop="@+id/item_a_price"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@+id/item_a_price"
                android:gravity="center"
                android:textColor="#303030"
                android:text="@string/text_dollarsign"
                android:textSize="20sp"
                android:layout_toStartOf="@+id/item_a_price"
                android:layout_marginEnd="4dp" />

            <EditText
                android:id="@+id/item_a_qty"
                style="@style/edittext"
                android:layout_below="@+id/item_a_price"
                android:layout_centerHorizontal="true"
                android:hint="@string/edittext_amount"
                android:importantForAutofill="no"
                android:nextFocusDown="@+id/item_b_price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_a_qty"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-28dp"
                android:text="@string/text_units"
                android:textColor="#303030"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_b"
                style="@style/choice_number"
                android:text="@string/text_item_b" />

            <TextView
                android:id="@+id/item_b_positive"
                style="@style/symbol"
                android:layout_toRightOf="@+id/title_b"
                android:text="@string/text_tickmark"
                android:textColor="@android:color/holo_green_dark"
                android:layout_toEndOf="@+id/title_b" />

            <TextView
                android:id="@+id/item_b_negative"
                style="@style/symbol"
                android:layout_toRightOf="@+id/title_b"
                android:text="@string/text_wrongsign"
                android:textColor="@android:color/holo_red_dark"
                android:layout_toEndOf="@+id/title_b" />

            <EditText
                android:id="@+id/item_b_price"
                style="@style/edittext"
                android:layout_below="@+id/title_b"
                android:layout_centerHorizontal="true"
                android:hint="@string/edittext_price"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/item_b_qty"
                style="@style/edittext"
                android:layout_below="@+id/item_b_price"
                android:layout_centerHorizontal="true"
                android:hint="@string/edittext_amount"
                android:nextFocusDown="@id/button_compare"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_b_price"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-24dp"
                android:gravity="center"
                android:text="@string/text_per"
                android:textColor="#303030"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/item_b_price"
                android:layout_alignTop="@+id/item_b_price"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@+id/item_b_price"
                android:gravity="center"
                android:text="@string/text_dollarsign"
                android:textColor="#303030"
                android:textSize="20sp"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/item_b_price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_b_qty"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-28dp"
                android:text="@string/text_units"
                android:textColor="#303030"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/block_chat"
        android:layout_below="@id/block_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_weight="2"
            android:src="@drawable/auntie"
            android:contentDescription="@string/content_description_auntie" />

        <TextView
            android:id="@+id/chatBox"
            style="@style/chatbox"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="8"
            android:focusable="false"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:paddingBottom="2dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text=""
            android:textSize="14sp"
            android:paddingStart="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_compare"
        android:layout_above="@id/button_reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="evaluate"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/compare_button" />

    <Button
        android:id="@+id/button_reset"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="reset"
        android:textColor="@android:color/white"
        android:background="#DCDCDC"
        android:text="@string/reset_button" />

</RelativeLayout>
